; ModuleID = '/home/carl/AnghaBench/sumatrapdf/ext/mujs/extr_jsrun.c_js_stackoverflow.c'
source_filename = "/home/carl/AnghaBench/sumatrapdf/ext/mujs/extr_jsrun.c_js_stackoverflow.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { %struct.TYPE_3__, i32 }
%struct.TYPE_3__ = type { i8* }

@JS_TLITSTR = common dso_local global i32 0, align 4
@STACK = common dso_local global %struct.TYPE_4__* null, align 8
@TOP = common dso_local global i64 0, align 8
@.str = private unnamed_addr constant [15 x i8] c"stack overflow\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*)* @js_stackoverflow to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @js_stackoverflow(i32* %0) #0 {
  %2 = alloca i32*, align 8
  store i32* %0, i32** %2, align 8
  %3 = load i32, i32* @JS_TLITSTR, align 4
  %4 = load %struct.TYPE_4__*, %struct.TYPE_4__** @STACK, align 8
  %5 = load i64, i64* @TOP, align 8
  %6 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %4, i64 %5
  %7 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %6, i32 0, i32 1
  store i32 %3, i32* %7, align 8
  %8 = load %struct.TYPE_4__*, %struct.TYPE_4__** @STACK, align 8
  %9 = load i64, i64* @TOP, align 8
  %10 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %8, i64 %9
  %11 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %10, i32 0, i32 0
  %12 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %11, i32 0, i32 0
  store i8* getelementptr inbounds ([15 x i8], [15 x i8]* @.str, i64 0, i64 0), i8** %12, align 8
  %13 = load i64, i64* @TOP, align 8
  %14 = add i64 %13, 1
  store i64 %14, i64* @TOP, align 8
  %15 = load i32*, i32** %2, align 8
  %16 = call i32 @js_throw(i32* %15)
  ret void
}

declare dso_local i32 @js_throw(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
